src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>AdditionalRejectionInformation__c</fullName>
        <description>SFDC1-6151 This field will help user enter Rejection reason related additional information</description>
        <label>Additional Rejection Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AllAssociatedTotalOpportunityValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SFDC1-5864 Cumulative Contract Value,Renaming the Label to &apos;Cumulative Contract Value&apos;, Can not change the API name as being used in Process Builder.</description>
        <inlineHelpText>This field contains total amount values for all opportunities associated to contract with stage equals &quot;6W-Renewal Won&quot;</inlineHelpText>
        <label>Cumulative Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AutoRenewStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8018-Minor Contract Updates</description>
        <inlineHelpText>Please check the box if this Contract is for Auto renewal stopped.</inlineHelpText>
        <label>Auto Renew Stopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewalDS__c</fullName>
        <description>SFDC1-7634 If the AutoRenewal__c on the Contract = True - then Display &quot;Yes&quot; in the field otherwise &quot;No&quot;</description>
        <formula>IF(AutoRenewal__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto Renewal For Drawloop</inlineHelpText>
        <label>AutoRenewalDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1178 Creating this field to track auto renewal of a Contract on Opportunity</description>
        <inlineHelpText>Customer can sign one agreement which will automatically renew year after year</inlineHelpText>
        <label>AutoRenewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPNum__c</fullName>
        <description>SFDC1-5223 This field holds the BP number and gets its value from the associated account BP field
SFDC1-5260 Updated formula to get BP# value from Channel Partner Associated on Opportunity
SFDC1-5176 Channel Partner BP# value cannot have commas,converted field type from Number to Text</description>
        <formula>TEXT(Opportunity__r.ChannelPartner__r.BP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner BP#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSI__c</fullName>
        <description>SFDC1-6073:This field is used to store the BSI Number from Opportunity field of the same name</description>
        <formula>Opportunity__r.BSI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSI #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCity__c</fullName>
        <description>SFDC1-905 Bill To: City</description>
        <inlineHelpText>Bill To: City</inlineHelpText>
        <label>Bill To: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToClientName__c</fullName>
        <description>SFDC1-905 Bill To: Client Name</description>
        <inlineHelpText>Bill To: Client Name</inlineHelpText>
        <label>Bill To: Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCompanySAP__c</fullName>
        <label>Bill To: Company SAP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactEmailAddress__c</fullName>
        <description>SFDC1- 905 Bill To: Contact Email Address</description>
        <inlineHelpText>Bill To: Contact Email Address</inlineHelpText>
        <label>Bill To: Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillToContactFirstName__c</fullName>
        <description>SFDC1-905 Bill To: Contact First Name</description>
        <inlineHelpText>Bill To: Contact First Name</inlineHelpText>
        <label>Bill To: Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactLastName__c</fullName>
        <description>SFDC1-905 Bill To: Contact Last Name</description>
        <inlineHelpText>Bill To: Contact Last Name</inlineHelpText>
        <label>Bill To: Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactSAP__c</fullName>
        <label>Bill To: Contact SAP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactTelephoneNumber__c</fullName>
        <description>SFDC1-905 Bill To: Contact Telephone Number</description>
        <inlineHelpText>Bill To: Contact Telephone Number</inlineHelpText>
        <label>Bill To: Contact Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCountryCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7542 This lookup refers to country mentioned in Bill To : Country (text)</description>
        <inlineHelpText>Bill To : Country</inlineHelpText>
        <label>Bill To: Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts (Bill To: Country)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillToCountryCode__c</fullName>
        <description>SFDC1-905 Bill To: Country</description>
        <inlineHelpText>Bill To: Country</inlineHelpText>
        <label>Bill To: Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToPostalZipCode__c</fullName>
        <description>SFDC1-905 Bill To: Postal/Zip Code</description>
        <inlineHelpText>Bill To: Postal/Zip Code</inlineHelpText>
        <label>Bill To: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStateProvince__c</fullName>
        <description>SFDC1-905 Bill To: State/Province</description>
        <inlineHelpText>Bill To: State/Province</inlineHelpText>
        <label>Bill To: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStreet__c</fullName>
        <description>SFDC1-905 Bill To: Street</description>
        <inlineHelpText>Bill To: Street</inlineHelpText>
        <label>Bill To: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Montly on the Last Day of the Month</fullName>
                </value>
                <value>
                    <fullName>Montly on the First day of the month</fullName>
                </value>
                <value>
                    <fullName>Last day of the month,</fullName>
                </value>
                <value>
                    <fullName>Consulting Agreement</fullName>
                </value>
                <value>
                    <fullName>Multi Year</fullName>
                </value>
                <value>
                    <fullName>Multi Year for Prof Svcs</fullName>
                </value>
                <value>
                    <fullName>One time</fullName>
                </value>
                <value>
                    <fullName>Quarterly last day of the month</fullName>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                </value>
                <value>
                    <fullName>Two Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidationsForProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5851 - This checkbox when set to true bypass the General Agreement validation rule on contract. This is used in process builders to update the contract record being created by wizard without throwing exception.</description>
        <inlineHelpText>By Pass Contract Validations For Flows</inlineHelpText>
        <label>By Pass Validations For Process Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelRequestReceivedDate__c</fullName>
        <description>SFDC1-718;Order Management will fill in this field with the Date they received a Cancel Letter from the Customer. Once the Date is filled in - it should trigger a case for the rep to CL the Open Renewal Opp.</description>
        <label>Cancel Request Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerCompanyName__c</fullName>
        <description>SFDC1-6390 This field is populated from the &quot;Channel Partner&quot; field on the Opportunity</description>
        <formula>Opportunity__r.ChannelPartner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCountryofIncorporation__c</fullName>
        <description>SFDC1-4549</description>
        <formula>ClientLegalEntityLookUp__r.IncorporatedIn__r.Name</formula>
        <label>Client Country of Incorporation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityCity__c</fullName>
        <description>SFDC1-631 Client Legal Entity : City</description>
        <inlineHelpText>Client Legal Entity : City</inlineHelpText>
        <label>Client Legal Entity: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7542 This lookup refers to country mentioned in Client Legal Entity: Country (text)</description>
        <inlineHelpText>Client Legal Entity: Country</inlineHelpText>
        <label>Client Legal Entity: Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityCountry__c</fullName>
        <description>SFDC1-631 Client Legal Entity : Country</description>
        <inlineHelpText>Client Legal Entity : Country</inlineHelpText>
        <label>Client Legal Entity: Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityLookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-905 Client Legal Entity</description>
        <inlineHelpText>Client&apos;s Legal Entity</inlineHelpText>
        <label>Client Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>ClientLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityStateProvince__c</fullName>
        <description>SFDC1-631 Client Legal Entity : State/Province</description>
        <inlineHelpText>Client Legal Entity : State/Province</inlineHelpText>
        <label>Client Legal Entity: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityStreet__c</fullName>
        <description>SFDC1-631 Client Legal Entity Address : Street</description>
        <inlineHelpText>Client Legal Entity : Street</inlineHelpText>
        <label>Client Legal Entity: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityZipPostalCode__c</fullName>
        <description>SFDC1-631 Client Legal Entity : Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <inlineHelpText>Client Legal Entity : Postal/Zip Code</inlineHelpText>
        <label>Client Legal Entity: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressCity__c</fullName>
        <description>SFDC1-2405: Client Notice Address: City</description>
        <inlineHelpText>Client Notice Address: City</inlineHelpText>
        <label>Client Notice Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7542 This lookup refers to country mentioned in Client Notice Address: Country (text)</description>
        <inlineHelpText>Client Notice Address: Country</inlineHelpText>
        <label>Client Notice Address: Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts (Client Notice Address: Country)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressCountry__c</fullName>
        <description>SFDC1-2405: Client Notice Address: Country</description>
        <inlineHelpText>Client Notice Address: Country</inlineHelpText>
        <label>Client Notice Address: Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressStateProvince__c</fullName>
        <description>SFDC1-2405: Client Notice Address: State/Province</description>
        <inlineHelpText>Client Notice Address: State/Province</inlineHelpText>
        <label>Client Notice Address: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressStreet__c</fullName>
        <description>SFDC1-2405: Client Notice Address: Street</description>
        <inlineHelpText>Client Notice Address: Street</inlineHelpText>
        <label>Client Notice Address: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressZipPostalCode__c</fullName>
        <description>SFDC1-2405: Client Notice Address: Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <inlineHelpText>Client Notice Address: Postal/Zip Code</inlineHelpText>
        <label>Client Notice Address: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientStateOfIncorporationNew__c</fullName>
        <description>SFDC1-8096 State of Incorporation of Client Legal Entity</description>
        <inlineHelpText>State of Incorporation of Client Legal Entity</inlineHelpText>
        <label>Client State of Incorporation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Comments</description>
        <inlineHelpText>Enter Comments related to Price Increase</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractAccount__c</fullName>
        <description>SFDC1-8125: This field is used in &quot;Contract Management&quot; case lightning page layout</description>
        <formula>Account.Name</formula>
        <inlineHelpText>Contract Account</inlineHelpText>
        <label>Contract Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6735 : Field related  to Consulting Record Type</description>
        <inlineHelpText>Approval required if &gt;$100K or has Milestones or non-standard terms</inlineHelpText>
        <label>Contract Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractOwner__c</fullName>
        <description>SFDC1-8125: Used in &quot;Contract Management&quot; case lightning layout</description>
        <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
        <inlineHelpText>Contract Owner</inlineHelpText>
        <label>Contract Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractRejectionPastDue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7488 : The checkbox get checked when Contract Status = Rejected exceeds 10 days</description>
        <inlineHelpText>The checkbox get checked when Contract Status = Rejected exceeds 10 days</inlineHelpText>
        <label>Contract Rejection Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <description>SFDC1-2060 Contract Status fields
SFDC1-7222: Adding picklist value &quot;Waiting on PO&quot;</description>
        <inlineHelpText>Please select from dropdown menu</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Signed By Customer</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Validated PO Pending</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Sent to Delivery</fullName>
                </value>
                <value>
                    <fullName>Sent to OM/Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered to Customer</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Processed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Scheduled Termination</fullName>
                </value>
                <value>
                    <fullName>Unscheduled Termination</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Received</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Sent To OM</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Sent for Delivery</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Waiting on PO</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractTermDays__c</fullName>
        <description>SFDC1-2405 Contract Term (Days)
SFDC1-6942 Adding value &apos;14&apos; to picklist</description>
        <inlineHelpText>Contract Term in Days</inlineHelpText>
        <label>Contract Term (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractTermInMonths__c</fullName>
        <description>SFDC1-4444  Formula field that calculates the number of months between the Contract Start Date and Contract End Date.
SFDC1-5366 Updated formula to reflect nearest number
SFDC1-7470 : Updated Formula to use the days as 30.5 as base</description>
        <formula>IF(ROUND((EndDate - StartDate)/30.5,0) == 0,1,IF((EndDate - StartDate)/30.5 == 1.5,FLOOR((EndDate - StartDate)/30.5),ROUND( (EndDate - StartDate)/30.5,0 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total duration of contract</inlineHelpText>
        <label>Contract Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractedPriceIncrease__c</fullName>
        <description>SFDC1-5201 Contracted Price Increase field for order form</description>
        <inlineHelpText>Add a percent if a specific custom annual price increase has been specified in the customer order/contract</inlineHelpText>
        <label>Contracted Price Increase</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CopytoBillTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4421 This field when checked will copy Global Alliance Address fields over to Bill To fields</description>
        <label>Copy to Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountersignatureOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7680 Countersignature Owner</description>
        <inlineHelpText>Please select Countersignature Owner</inlineHelpText>
        <label>Countersignature Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CountersignatureOwnerContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountersignatureStatus__c</fullName>
        <description>SFDC1-7680 Countersignature Process</description>
        <inlineHelpText>Please select Countersignature Status</inlineHelpText>
        <label>Countersignature Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAcceptanceRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-718;Does the customer have to accept that product has been dellivered or expectations met prior to invoice.  Usually on consluting (SOW) orders.</description>
        <label>Customer Acceptance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerCarrierAccount__c</fullName>
        <description>SFDC1-718;The account number delivery can charge if customer is paying for special delivery.</description>
        <label>Customer Carrier Account #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateLetterSent__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Date Letter Sent</description>
        <inlineHelpText>Enter Date when Letter Sent</inlineHelpText>
        <label>Date Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryPriority__c</fullName>
        <description>SFDC1-718; Decide the Delivery priority of a Contract</description>
        <label>Delivery Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traceable</fullName>
                </value>
                <value>
                    <fullName>Overnight</fullName>
                </value>
                <value>
                    <fullName>Two Day</fullName>
                </value>
                <value>
                    <fullName>Overnight AM</fullName>
                </value>
                <value>
                    <fullName>Intl Express</fullName>
                </value>
                <value>
                    <fullName>First Class</fullName>
                </value>
                <value>
                    <fullName>Customer Pickup</fullName>
                </value>
                <value>
                    <fullName>Mail Special Instructions</fullName>
                </value>
                <value>
                    <fullName>2nd Day Prepaid</fullName>
                </value>
                <value>
                    <fullName>Ground Prepaid</fullName>
                </value>
                <value>
                    <fullName>Overnight Prepaid</fullName>
                </value>
                <value>
                    <fullName>PAC</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoNotdelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoNotdelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SFDC1-2405 Effective Date</description>
        <inlineHelpText>Date where both parties have signed the agreement</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <description>SFDC1-9301:Email Address</description>
        <inlineHelpText>Please provide the email address</inlineHelpText>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExemptionFromIncreaseIfApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5807 : This field will hold the value of Exemption From Increase If Applicable</description>
        <inlineHelpText>This will be Exempted From Increase If Applicable</inlineHelpText>
        <label>Exemption From Increase If Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingAnnualRevenue__c</fullName>
        <description>SFDC1-9300:Price Increase Details section field creation</description>
        <inlineHelpText>Existing Annual Revenue</inlineHelpText>
        <label>Existing Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fastrack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5851 Checkbox on &quot;Order From&quot; contracts</description>
        <inlineHelpText>Use Fast Track terms and conditions if under $100k</inlineHelpText>
        <label>Fastrack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstYearContractValue__c</fullName>
        <description>SFDC1-5762 This field is a roll-up summary field that sums the First Year field from Contract Line Items on the Contract object</description>
        <label>First Year Contract Value</label>
        <summarizedField>ContractLineItem__c.FirstYear__c</summarizedField>
        <summaryForeignKey>ContractLineItem__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FreightForwarder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4421 This field will help with the channel partner functionality to create CP documents</description>
        <label>Freight Forwarder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeneralAgreementDate__c</fullName>
        <description>SFDC1-2209 This field helps user to select the General Agreement Date</description>
        <label>Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GeneralAgreementType__c</fullName>
        <description>SFDC1-2209 This field helps user select the current Agreement Type that the customer has signed that is the overarching agreement the order is falling under.
SFDC1-7189- Renaming &apos;General Agreement&apos; to &apos;Master Agreemant&apos;</description>
        <label>Master Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IHS Markit Master Agreement</fullName>
                </value>
                <value>
                    <fullName>IHS General Agreement</fullName>
                </value>
                <value>
                    <fullName>IHS Master Agreement</fullName>
                </value>
                <value>
                    <fullName>Markit Master Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>IHS Markit General Agreement</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Markit General Agreement</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralAgreementValue__c</fullName>
        <description>SFDC1-2209 This field helps user provide the General Agreement Value</description>
        <label>Other Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1357 Contract Data Model
SFDC1-7189- Renaming &apos;General Agreement&apos; to &apos;Master Agreemant&apos;</description>
        <label>Master Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Agreement</value>
            </filterItems>
            <infoMessage>Please select a General Agreement Contract</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>GeneralAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressCity__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressCountry__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressPostalZipCode__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressStateProvince__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalAllianceAddressStreet__c</fullName>
        <description>SFDC1-4421 This field holds information about Global Alliance</description>
        <label>Channel Partner Address: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>